# esp-gps-program

./: CMakeLists.txt  README.md
components/args/: CMAKElists.txt  task_args.cpp  task_args.hpp
components/draw_qr/: CMakeLists.txt  draw_qr.cpp
components/gps/: CMakeLists.txt  gps.cpp  gps.hpp  gps_data.hpp  gps_data_t.hpp  nmea_parser.cpp  nmea_parser.hpp
components/gps/nmea_parser/: nmea_parser.cpp  nmea_parser.hpp
components/nav/: CMakelists.txt  navigation.cpp  navigation.hpp
components/qr/: CMakeLists.txt  draw_qr.cpp  draw_qr.hpp  qrcode_gen.c
components/route/: CMakeLists.txt  route.cpp  route.hpp
components/screen/: CMakeLists.txt  screen.cpp  screen.hpp
components/screen/args/: screen_args.hpp
components/screen/i2c_setup/: i2c_setup.cpp  i2c_setup.hpp
components/screen/lvgl_screens/: inactive_screen.cpp  lvgl_screens.cpp  main_menu.cpp  overview_screen.cpp  qr_screen.cpp  qr_screen.hpp  screens.hpp  title_screen.cpp
components/screen/lvgl_screens/images/: paint_1.c  paint_3.c  paint_middle.c
components/screen/lvgl_setup/: lvgl_setup.cpp  lvgl_setup.hpp
components/server/: CMakeLists.txt  server.cpp  server.hpp
components/server/dns_server/: dns_server.cpp  dns_server.hpp  espressif_dns_server.h
components/tasks/: CMakelists.txt  gps_tasks.cpp  navigation_tasks.cpp  route_tasks.cpp  server_tasks.cpp  tasks.hpp
components/timer/: CMakelists.txt  timer.cpp  timer.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/args/: task_args.hpp
